--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-  <title>Signs by Design</title>
-  <link href="css/style.css" rel="stylesheet" type="text/css">
+<!doctype html>
+<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--><html class="no-js" lang="en"> <!--<![endif]-->
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+	<title>Responsive 996 Grid System</title>
+	<meta name="description" content="">
+	<meta name="author" content="">
+
+	<meta name="viewport" content="width=device-width">
+
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/base.css">
+	<link rel="stylesheet" href="css/grid.css">
+	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/demo.css">
+
+	<script src="js/modernizr-2.6.2.min.js"></script>
+	
 </head>
 <body>
+<div class="container">  
+
 <div class="main-out"></div>
 <div class="main">
 <div class="page">
@@ -106,6 +125,9 @@ Our experienced staff can do whatever is required for your particular job.  If y
 <img src="images/footer.gif" alt="html templates" border="0" height="1" width="1">
 </div>
 </div>
+</div>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+<script src="js/scripts.js"></script>
 </div>
 </body>
 </html>
