--- a/nonillum.html
+++ b/nonillum.html
@@ -23,6 +23,8 @@
 	
 </head>
 <body>
+<div class="container">
+
 <div class="main-out"></div>
 <div class="main">
 <div class="page">
@@ -126,5 +128,6 @@ Our experienced staff can do whatever is required for your particular job.  If y
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 <script src="js/scripts.js"></script>
+</div>
 </body>
 </html>
