--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>Responsive 996 Grid System</title>
+	<title>SignsbyDesign</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
