added new pages and folders

--- a/nonillum.html
+++ b/nonillum.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<title>SignsbyDesign</title>
+	<title>SignsByDesign | Non-Illuminated Gallery</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -17,26 +17,52 @@
 	<link rel="stylesheet" href="css/base.css">
 	<link rel="stylesheet" href="css/grid.css">
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/demo.css">
+	
 
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	
 </head>
-<body>
-<div class="container">
 
-<div class="main-out"></div>
-<div class="main">
-<div class="page">
-<div class="top">
-<div class="header">
-<div class="header-top">
-<h1>Signs<span>ByDesign</span></h1>
-<p>Call Us: 864-322-7073</p>
-<p> Fax: 864-322-7307</p>
-<p> email: info4sign@gmail.com</p>
-</div>
-<div class="topmenu">
+<body> 
+ <div class="container">
+    <header>
+      <h1>SignsByDesign</h1>
+    </header>
+    <nav>
+        <ul>
+             <li><a href="index.html">Home</a></li>
+             <li><a href="install.html">Installation Services</a></li>
+             <li><a href="vehicle.html">Vehicle Gallery</a></li>
+             <li><a href="illum.html">Illum. Sign Gallery</a></li>
+             <li><a href="nonillum.html">Non Illum. Sign Gallery</a></li>
+             <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>  
+    <article>
+    <h2>Non Illuminated Sign Gallery</h2>
+
+<p>When choosing the substrate for your sign there are many choices available. You could choose plastic, wood, acrylic, aluminum, corrugated plastic (Corroplast), foam board and more This website demonstrates a wide variety of custom signs.</p>
+<p>If you need assistance with what types of materials or sign
+will work best for you, please feel free to email or call, and
+we'll work with you to create a custom sign for your business.</p>
+
+<p>Our staff values your business and is committed to providing
+quality products for our clients.</p>
+
+
+    <h2>Gallery</h2>
+    <ul>
+			<li><a href="images/nonilluminated/banner.jpg" title="buildingsign"><img src="images/nonilluminated/banner.jpg" width="101"height="130" alt="buildingsign"/></a></li>
+			<li><a href="images/nonilluminated/building.jpg" title="senior building"><img src="images/nonilluminated/building.jpg" width="101" height="130" alt="seniorbuilding"/></a></li>
+			<li><a href="images/nonilluminated/dimension.jpg" title="apartment sign"><img src="images/nonilluminated/dimension.jpg" width="101" height="130" alt="apartment sign"/></a></li>
+			<li><a href="images/nonilluminated/realtor.jpg" title="custom homes"><img src="images/nonilluminated/realtor.jpg" width="101" height="130" alt="custom homes"/></a></li>
+			<li><a href="images/nonilluminated/sandblast.jpg" title="knights bridge"><img src="images/nonilluminated/sandblast.jpg" width="130" height="101" alt="knights bridge"/></a></li>
+			<li><a href="images/nonilluminated/street.jpg" title="street name sign"><img src="images/nonilluminated/street.jpg" width="130" height="101" alt="street name sign"/></a></li>
+	</ul>
+    </article>
+    <aside></aside>
+    <footer class="grid_12">
+ <nav>
 <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="install.html">Installation Services</a></li>
@@ -44,90 +70,12 @@
   <li><a href="illum.html">Illum. Sign Gallery</a></li>
   <li><a href="nonillum.html">Non Illum. Sign Gallery</a></li>
   <li><a href="contact.html">Contact</a></li>
-</ul>
-
-  </div>
-<div class="header-img">
-</div>
-</div>
-<div class="content">
-<div class="content-left">
-<div class="row1">
-<div class="img"><img src="images/img1.jpg" alt="" height="101"
- width="157"></div>
-<div class="welcome">
-<h1 class="title">Welcome to <span>Signs by Design</span></h1>
-<p><strong>Thank you for visiting our site.</strong><br>
-Thank you for visiting our site. We design, manufacture, install, repair, maintain and refurbish all types of signage.
-We welcome both local customers and national accounts.
-
-This website demonstrates a wide variety of custom signs. If you need assistance with what types of materials or sign will work best for you, please feel free to email or call, and we'll work with you to create a custom sign for your business.
-
-Our staff values your business and is committed to providing quality products for our clients.   We desire to have a long term relationship with our clients by meeting all of their signage needs. 
-
-And as always, our success depends on your satisfaction.
-</p>
-</div>
-</div>
-<div class="row2">
-<div class="section1">
-<h2 class="subtitle">Whats New</h2>
-<p><strong>There is tons of repair and designs we do!!</strong><br>
-Just visit any of the links to your right to check out our work, if there is anything
-that you like then just click the contact link above to get you in the right direction.
-Or if you need a reparation give us a call we could come check your damaged sign and give
-you our best quote before repairing the problem.</p>
-<p></p>
-<p></p>
-
-</div>
-<div class="section2">
-<h2 class="subtitle">Service and Repairs</h2>
-<p><strong>Weather your sign lights partially, bad weather tears up 
-your sign or it's been hit, our professional staff can take care of any problem 
-you have with your sign.</strong><br>We have experience with repairing and servicing pylons, cabinets, channel letters, neon, LED, digital message boards and more.   
-
-Our service extends to national accounts, commercial properties, restaurant chains, and one store owners. 
-
-Our experienced staff can do whatever is required for your particular job.  If you're not sure if we can repair or service your sign, please call or email and we'll be glad to discuss your needs.
-
-</p>
-<p></p>
-</div>
-</div>
-</div>
-<div class="content-right">
-<h2>Gallery</h2>
-<ul>
-  <li style="border-top: medium none;"><a href="installation.html">Install</a></li>
-  <li><a href="service.html">Service/Repair</a></li>
-  <li><a href="refurbish.html">Refurbish</a></li>
-  <li><a href="survey.html">Survey/Permit</a></li>
-  <li><a href="lighting.html">Lighting</a></li>
-  </ul>
-<p></p>
-<p></p>
-<p></p>
-</div>
-</div>
-</div>
-<div class="bottom">
-<ul>
-  <li style="border-left: medium none;"><a href="index.html">Home</a></li>
-  <li><a href="install.html">Installation Services</a></li>
-  <li><a href="vehicle.html">Vehicle Gallery</a></li>
-  <li><a href="illum.html">Illum. Sign Gallery</a></li>
-  <li><a href="nonillum.html">Non Illum. Sign Gallery</a></li>
-  <li><a href="contact.html">Contact</a></li>
  </ul>
-
-<p>&copy; Copyright 2013. Designed by Antonio Vega-Ceja</p>
-<img src="images/footer.gif" alt="html templates" border="0" height="1" width="1">
-</div>
-</div>
+     </nav>
+    <p class ="grid_7">Copyright &copy; 2013 SignsByDesign Company</p>
+    </footer>
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 <script src="js/scripts.js"></script>
-</div>
 </body>
 </html>
