--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
  <div class="container">
     <header>
       <h1>SignsByDesign</h1>
+      <img src="images/SignsbyDesign.png" width="" height="" alt="Signs By Design Logo" title="Logo" >  
     </header>
     <nav>
         <ul>
