--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <body> 
  <div class="container">
     <header>
-      <h1>SignsByDesign</h1>
-      <img src="images/SignsbyDesign.png" width="" height="" alt="Signs By Design Logo" title="Logo" >  
+      
+      <img src="images/SignsbyDesign.png" alt="Signs By Design Logo" title="Logo" >  
     </header>
     <nav>
         <ul>
