--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </ul>
     </nav>  
     <article>
-    <h1>Welcome to Signs by Design</h1>
+    <h1>Welcome to<h1> <img src="images/Dylogo.jpg" width="100" height="100" alt="Daddy Yankee Logo" title="Logo" >
 <p>Thank you for visiting our site.
 Thank you for visiting our site. We design, manufacture, install, repair, maintain and refurbish all types of signage.
 We welcome both local customers and national accounts.
