--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         </ul>
     </nav>  
     <article>
-    <h1>Welcome to<h1><img src="images/SignsbyDesign.png" alt="Signs By Design Logo" title="Logo" >
+    <h1>Welcome to<h1> <img src="images/SignsbyDesign.png" alt="Signs By Design Logo" title="Logo" >
 
-<p>Thank you for visiting our site.
+<p class="info">Thank you for visiting our site.
 Thank you for visiting our site. We design, manufacture, install, repair, maintain and refurbish all types of signage.
 We welcome both local customers and national accounts.
 
@@ -51,7 +51,7 @@ Our staff values your business and is committed to providing quality products fo
 
 And as always, our success depends on your satisfaction.</p> 
 
-      <p>Weather your sign lights partially, bad weather tears up 
+      <p class="info">Weather your sign lights partially, bad weather tears up 
 your sign or it's been hit, our professional staff can take care of any problem 
 you have with your sign. We have experience with repairing and servicing pylons, cabinets, channel letters, neon, LED, digital message boards and more.   
 
@@ -59,7 +59,7 @@ Our service extends to national accounts, commercial properties, restaurant chai
 
 Our experienced staff can do whatever is required for your particular job.  If you're not sure if we can repair or service your sign, please call or email and we'll be glad to discuss your needs.</p>
       
-<p>There is tons of repair and designs we do!!
+<p class="info">There is tons of repair and designs we do!!
 Just visit any of the links to your right to check out our work, if there is anything
 that you like then just click the contact link above to get you in the right direction.
 Or if you need a reparation give us a call we could come check your damaged sign and give
