--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <article>
     <h1>Welcome to<h1> <img src="images/SignsbyDesign.png" alt="Signs By Design Logo" title="Logo" >
 
-<p class="info">Thank you for visiting our site.
+<h4><p class="info">Thank you for visiting our site.
 Thank you for visiting our site. We design, manufacture, install, repair, maintain and refurbish all types of signage.
 We welcome both local customers and national accounts.
 
@@ -49,7 +49,7 @@ This website demonstrates a wide variety of custom signs. If you need assistance
 
 Our staff values your business and is committed to providing quality products for our clients.   We desire to have a long term relationship with our clients by meeting all of their signage needs. 
 
-And as always, our success depends on your satisfaction.</p> 
+And as always, our success depends on your satisfaction.</p></h4> 
 
       <p class="info">Weather your sign lights partially, bad weather tears up 
 your sign or it's been hit, our professional staff can take care of any problem 
