adding coding to gallerys, navigation , header and footer on css

--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,10 @@
 <body> 
  <div class="container">
     <header>
-      <h1>SignsByDesign</h1>
+      <div id="logo"><img src="images/SignsbyDesign.png" alt="Signs By Design Logo" title="Logo" > </div>
     </header>
-    <nav>
+     <div id="topnav">
+    <nav> 
         <ul>
              <li><a href="index.html">Home</a></li>
              <li><a href="install.html">Installation Services</a></li>
@@ -37,9 +38,10 @@
              <li><a href="nonillum.html">Non Illum. Sign Gallery</a></li>
              <li><a href="contact.html">Contact</a></li>
         </ul>
-    </nav>  
+    </nav> 
+    </div> 
     <article>
-    <h2>Contact Information</h2>
+    <h2 class="header">Contact Information</h2>
 
 <p>Your business is very important to us.    
 We can be reached Monday - Friday,
@@ -95,8 +97,9 @@ Please contact us via email, fax or phone.</p>
  
 
     </article>
-    <aside></aside>
+   
     <footer class="grid_12">
+    <div id="bottom">
  <nav>
 <ul>
   <li><a href="index.html">Home</a></li>
@@ -107,6 +110,7 @@ Please contact us via email, fax or phone.</p>
   <li><a href="contact.html">Contact</a></li>
  </ul>
      </nav>
+     </div>
     <p class ="grid_7">Copyright &copy; 2013 SignsByDesign Company</p>
     </footer>
 </div>
