--- a/illum.html
+++ b/illum.html
@@ -26,8 +26,9 @@
 <body> 
  <div class="container">
     <header>
-      <h1>SignsByDesign</h1>
+      <div id="logo"><img src="images/SignsbyDesign.png" alt="Signs By Design Logo" title="Logo" > </div>
     </header>
+    <div id="topnav">
     <nav>
         <ul>
              <li><a href="index.html">Home</a></li>
@@ -37,28 +38,31 @@
              <li><a href="nonillum.html">Non Illum. Sign Gallery</a></li>
              <li><a href="contact.html">Contact</a></li>
         </ul>
-    </nav>  
+    </nav> 
+    </div> 
     <article>
-    <h2>Illuminated Sign Gallery</h2>
+    <h2 class="header">Illuminated Sign Gallery</h2>
 
-<p>Illuminated signs are made from many different types of substrates and different types of lighting.     This section demonstrates a wide variety of custom made illuminated signs.
+<p class="info">Illuminated signs are made from many different types of substrates and different types of lighting.     This section demonstrates a wide variety of custom made illuminated signs.
 If you need assistance with what types of materials or sign
 will work best for you, please feel free to email or call, and we'll work with you to create a custom illuminated sign that will work best for your business.</p>
 
-<p>Our staff values your business and is committed to providing
+<p class="info">Our staff values your business and is committed to providing
 quality products for our clients.    We welcome both local clients and national accounts. </p>
-    <h2>Gallery</h2>
-    <ul>
-			<li><a href="images/illuminated/cabinet.jpg" title="fit4all"><img src="images/illuminated/cabinet.jpg" width="101"height="130" alt="fit4all"/></a></li>
-			<li><a href="images/illuminated/delivery.jpg" title="perkingtaxi"><img src="images/illuminated/delivery.jpg" width="101" height="130" alt="perkingtaxi"/></a></li>
-			<li><a href="images/illuminated/gamecenter.jpg" title="gamecenter"><img src="images/illuminated/gamecenter.jpg" width="101" height="130" alt="gamecenter"/></a></li>
-			<li><a href="images/illuminated/oogles.jpg" title="ooglessign"><img src="images/illuminated/oogles.jpg" width="101" height="130" alt="oogles sign"/></a></li>
-			<li><a href="images/illuminated/oriental.jpg" title="oriental restaurant"><img src="images/illuminated/oriental.jpg" width="130" height="101" alt="oriental restaurant"/></a></li>
-			<li><a href="images/illuminated/subs.jpg" title="subs sign"><img src="images/illuminated/subs.jpg" width="130" height="101" alt="subs sign"/></a></li>
+    <h2 class="gallery">Gallery</h2>
+    
+    <ul class="gallerylist">
+			<li><a href="images/illuminated/cabinet.jpg" title="fit4all"><div class="zoom"><img src="images/illuminated/cabinet.jpg" width="101" height="130" alt="fit4all"/></div></a></li>
+			<li><a href="images/illuminated/delivery.jpg" title="perkingtaxi"><div class="zoom"><img src="images/illuminated/delivery.jpg" width="101" height="130" alt="perkingtaxi"/></div></a></li>
+			<li><a href="images/illuminated/gamecenter.jpg" title="gamecenter"><div class="zoom"><img src="images/illuminated/gamecenter.jpg" width="101" height="130" alt="gamecenter"/></div></a></li>
+			<li><a href="images/illuminated/oogles.jpg" title="ooglessign"><div class="zoom"><img src="images/illuminated/oogles.jpg" width="101" height="130" alt="oogles sign"/></div></a></li>
+			<li><a href="images/illuminated/oriental.jpg" title="oriental restaurant"><div class="zoom"><img src="images/illuminated/oriental.jpg" width="130" height="101" alt="oriental restaurant"/></div></a></li>
+			<li><a href="images/illuminated/subs.jpg" title="subs sign"><div class="zoom"><img src="images/illuminated/subs.jpg" width="130" height="101" alt="subs sign"/></div></a></li>
 	</ul>
     </article>
-    <aside></aside>
+    
     <footer class="grid_12">
+    <div id="bottom">
  <nav>
 <ul>
   <li><a href="index.html">Home</a></li>
@@ -69,6 +73,7 @@ quality products for our clients.    We welcome both local clients and national 
   <li><a href="contact.html">Contact</a></li>
  </ul>
      </nav>
+     </div>
     <p class ="grid_7">Copyright &copy; 2013 SignsByDesign Company</p>
     </footer>
 </div>
