--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 <body> 
  <div class="container">
     <header>
-      <img src="images/SignsbyDesign.png" alt="Signs By Design Logo" title="Logo" >  
+      <div id="logo"><img src="images/SignsbyDesign.png" alt="Signs By Design Logo" title="Logo" > </div> 
     </header>
+    <div id="topnav">
     <nav>
         <ul>
              <li><a href="index.html">Home</a></li>
@@ -37,9 +38,11 @@
              <li><a href="nonillum.html">Non Illum. Sign Gallery</a></li>
              <li><a href="contact.html">Contact</a></li>
         </ul>
-    </nav>  
+    </nav> 
+    </div> 
     <article>
-    <h1>Welcome to</h1> <img src="images/SignsbyDesign.png" alt="Signs By Design Logo" title="Logo" >
+    
+    <h1 class="header">Welcome to</h1> <div id="logo2"><img src="images/SignsbyDesign.png" alt="Signs By Design Logo" title="Logo" ></div>
 
 <p class="info">Thank you for visiting our site.
 Thank you for visiting our site. We design, manufacture, install, repair, maintain and refurbish all types of signage.
@@ -60,13 +63,13 @@ Our service extends to national accounts, commercial properties, restaurant chai
 Our experienced staff can do whatever is required for your particular job.  If you're not sure if we can repair or service your sign, please call or email and we'll be glad to discuss your needs.</p>
       
 <p class="info">There is tons of repair and designs we do!!
-Just visit any of the links to your right to check out our work, if there is anything
+Just visit any of the links t above to check out our work, if there is anything
 that you like then just click the contact link above to get you in the right direction.
 Or if you need a reparation give us a call we could come check your damaged sign and give
 you our best quote before repairing the problem.</p>
     </article>
-    <aside></aside>
     <footer class="grid_12">
+    <div id="bottom">
  <nav>
 <ul>
   <li><a href="index.html">Home</a></li>
@@ -77,8 +80,10 @@ you our best quote before repairing the problem.</p>
   <li><a href="contact.html">Contact</a></li>
  </ul>
      </nav>
+     </div>
     <p class ="grid_7">Copyright &copy; 2013 SignsByDesign Company</p>
     </footer>
+   
 </div>
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 <script src="js/scripts.js"></script>
