--- a/install.html
+++ b/install.html
@@ -26,8 +26,9 @@
 <body> 
  <div class="container">
     <header>
-      <h1>SignsByDesign</h1>
+      <div id="logo"><img src="images/SignsbyDesign.png" alt="Signs By Design Logo" title="Logo" ></div>
     </header>
+    <div id="topnav">
     <nav>
         <ul>
              <li><a href="index.html">Home</a></li>
@@ -38,10 +39,11 @@
              <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>  
+    </div>
     <article>
-    <h2>Installation Services</h2>
+    <h2 class="header">Installation Services</h2> 
 
-<p>At Signs By Design we can install or remove all types of signage.
+<p class="info">At Signs By Design we can install or remove all types of signage.
 
 We have an experienced staff with the necessary equipment to make sure your job is installed properly.   Some of our equipment includes crane trucks, trailers, welders and augers.
 
@@ -52,20 +54,21 @@ Our experienced staff can do whatever is required for your
 particular job.
 
 And as always, our success depends on your satisfaction.</p>
-<h2>Gallery</h2>
-    <ul>
-			<li><a href="images/installation/cabinet.jpg" title="outlet mall sign"><img src="images/installation/cabinet.jpg" width="101" height="130" alt="outlet mall sign"/></a></li>
-			<li><a href="images/installation/buffalowings.jpg" title="buffalowings restaurant"><img src="images/installation/buffalowings.jpg" width="101" height="130" alt="buffalowings restaurant"/></a></li>
-			<li><a href="images/installation/flags.jpg" title="flags"><img src="images/installation/flags.jpg" width="101" height="130" alt="flags"/></a></li>
-			<li><a href="images/installation/flex.jpg" title="shrine sign"><img src="images/installation/flex.jpg" width="101" height="130" alt="shrine sign"/></a></li>
-			<li><a href="images/installation/dickssporting.jpg" title="dicks sporting goods"><img src="images/installation/dickssporting.jpg" width="130" height="101" alt="dicks sporting goods"/></a></li>
-			<li><a href="images/installation/littleca.jpg" title="little ceasars pizza"><img src="images/installation/littleca.jpg" width="130" height="101" alt="little ceasars pizza"/></a></li>
+<h2 class="gallery">Gallery</h2>
+    <ul class="gallerylist">
+			<li><a href="images/installation/cabinet.jpg" title="outlet mall sign"><div class="zoom"><img src="images/installation/cabinet.jpg" width="101" height="130" alt="outlet mall sign"/></div></a></li>
+			<li><a href="images/installation/buffalowings.jpg" title="buffalowings restaurant"><div class="zoom"><img src="images/installation/buffalowings.jpg" width="101" height="130" alt="buffalowings restaurant"/></div></a></li>
+			<li><a href="images/installation/flags.jpg" title="flags"><div class="zoom"><img src="images/installation/flags.jpg" width="101" height="130" alt="flags"/></div></a></li>
+			<li><a href="images/installation/flex.jpg" title="shrine sign"><div class="zoom"><img src="images/installation/flex.jpg" width="101" height="130" alt="shrine sign"/></div></a></li>
+			<li><a href="images/installation/dickssporting.jpg" title="dicks sporting goods"><div class="zoom"><img src="images/installation/dickssporting.jpg" width="130" height="101" alt="dicks sporting goods"/></div></a></li>
+			<li><a href="images/installation/littleca.jpg" title="little ceasars pizza"><div class="zoom"><img src="images/installation/littleca.jpg" width="130" height="101" alt="little ceasars pizza"/></div></a></li>
 	</ul>
 
 
     </article>
-    <aside></aside>
+   
     <footer class="grid_12">
+    <div id="bottom">
  <nav>
 <ul>
   <li><a href="index.html">Home</a></li>
@@ -76,6 +79,7 @@ And as always, our success depends on your satisfaction.</p>
   <li><a href="contact.html">Contact</a></li>
  </ul>
      </nav>
+     </div>
     <p class ="grid_7">Copyright &copy; 2013 SignsByDesign Company</p>
     </footer>
 </div>
