--- a/nonillum.html
+++ b/nonillum.html
@@ -26,8 +26,9 @@
 <body> 
  <div class="container">
     <header>
-      <h1>SignsByDesign</h1>
+      <div id="logo"><img src="images/SignsbyDesign.png" alt="Signs By Design Logo" title="Logo" > </div>
     </header>
+     <div id="topnav">
     <nav>
         <ul>
              <li><a href="index.html">Home</a></li>
@@ -37,31 +38,32 @@
              <li><a href="nonillum.html">Non Illum. Sign Gallery</a></li>
              <li><a href="contact.html">Contact</a></li>
         </ul>
-    </nav>  
+    </nav> 
+    </div> 
     <article>
-    <h2>Non Illuminated Sign Gallery</h2>
+    <h2 class="header">Non Illuminated Sign Gallery</h2>
 
-<p>When choosing the substrate for your sign there are many choices available. You could choose plastic, wood, acrylic, aluminum, corrugated plastic (Corroplast), foam board and more This website demonstrates a wide variety of custom signs.</p>
-<p>If you need assistance with what types of materials or sign
+<p class="info">When choosing the substrate for your sign there are many choices available. You could choose plastic, wood, acrylic, aluminum, corrugated plastic (Corroplast), foam board and more This website demonstrates a wide variety of custom signs.</p>
+<p class="info">If you need assistance with what types of materials or sign
 will work best for you, please feel free to email or call, and
 we'll work with you to create a custom sign for your business.</p>
 
-<p>Our staff values your business and is committed to providing
-quality products for our clients.</p>
 
 
-    <h2>Gallery</h2>
-    <ul>
-			<li><a href="images/nonilluminated/banner.jpg" title="buildingsign"><img src="images/nonilluminated/banner.jpg" width="101"height="130" alt="buildingsign"/></a></li>
-			<li><a href="images/nonilluminated/building.jpg" title="senior building"><img src="images/nonilluminated/building.jpg" width="101" height="130" alt="seniorbuilding"/></a></li>
-			<li><a href="images/nonilluminated/dimension.jpg" title="apartment sign"><img src="images/nonilluminated/dimension.jpg" width="101" height="130" alt="apartment sign"/></a></li>
-			<li><a href="images/nonilluminated/realtor.jpg" title="custom homes"><img src="images/nonilluminated/realtor.jpg" width="101" height="130" alt="custom homes"/></a></li>
-			<li><a href="images/nonilluminated/sandblast.jpg" title="knights bridge"><img src="images/nonilluminated/sandblast.jpg" width="130" height="101" alt="knights bridge"/></a></li>
-			<li><a href="images/nonilluminated/street.jpg" title="street name sign"><img src="images/nonilluminated/street.jpg" width="130" height="101" alt="street name sign"/></a></li>
+
+    <h2 class="gallery">Gallery</h2>
+    <ul class="gallerylist">
+			<li><a href="images/nonilluminated/banner.jpg" title="buildingsign"><div class="zoom"><img src="images/nonilluminated/banner.jpg" width="101" height="130" alt="buildingsign"/></div></a></li>
+			<li><a href="images/nonilluminated/building.jpg" title="senior building"><div class="zoom"><img src="images/nonilluminated/building.jpg" width="101" height="130" alt="seniorbuilding"/></div></a></li>
+			<li><a href="images/nonilluminated/dimension.jpg" title="apartment sign"><div class="zoom"><img src="images/nonilluminated/dimension.jpg" width="101" height="130" alt="apartment sign"/></div></a></li>
+			<li><a href="images/nonilluminated/realtor.jpg" title="custom homes"><div class="zoom"><img src="images/nonilluminated/realtor.jpg" width="101" height="130" alt="custom homes"/></div></a></li>
+			<li><a href="images/nonilluminated/sandblast.jpg" title="knights bridge"><div class="zoom"><img src="images/nonilluminated/sandblast.jpg" width="130" height="101" alt="knights bridge"/></div></a></li>
+			<li><a href="images/nonilluminated/street.jpg" title="street name sign"><div class="zoom"><img src="images/nonilluminated/street.jpg" width="130" height="101" alt="street name sign"/></div></a></li>
 	</ul>
     </article>
-    <aside></aside>
+   
     <footer class="grid_12">
+    <div id="bottom">
  <nav>
 <ul>
   <li><a href="index.html">Home</a></li>
@@ -72,6 +74,7 @@ quality products for our clients.</p>
   <li><a href="contact.html">Contact</a></li>
  </ul>
      </nav>
+     </div>
     <p class ="grid_7">Copyright &copy; 2013 SignsByDesign Company</p>
     </footer>
 </div>
