--- a/vehicle.html
+++ b/vehicle.html
@@ -26,8 +26,9 @@
 <body> 
  <div class="container">
     <header>
-      <h1>SignsByDesign</h1>
+      <div id="logo"><img src="images/SignsbyDesign.png" alt="Signs By Design Logo" title="Logo" > </div>
     </header>
+     <div id="topnav">
     <nav>
         <ul>
              <li><a href="index.html">Home</a></li>
@@ -37,29 +38,31 @@
              <li><a href="nonillum.html">Non Illum. Sign Gallery</a></li>
              <li><a href="contact.html">Contact</a></li>
         </ul>
-    </nav>  
+    </nav> 
+    </div> 
     <article>
-    <h2>Vehicle Graphics</h2>
+    <h2 class="header">Vehicle Graphics</h2>
 
-<p>A great way to promote your business or product is by advertising on your vehicle.   It's like having a moving billboard!</p>
+<p class="info">A great way to promote your business or product is by advertising on your vehicle.   It's like having a moving billboard!</p>
 
-<p>Our staff has extensive experience with vehicle graphic installation.
+<p class="info">Our staff has extensive experience with vehicle graphic installation.
 We have a digital printer, laminator and vinyl cutter, which allows us to print and cut your graphics on site.   We install both vinyl and digital graphics, as well as wrapping vehicles.   Our shop has a drive-in bay which allows indoor installation for most vehicles.</p>
 
-<p>We have installed graphics from small cars to 18 wheelers.
+<p class="info">We have installed graphics from small cars to 18 wheelers.
 Whether you know what you want on your vehicle or need advise as to what will be most effective for your vehicle(s), call or email us and we'll be happy to assist you. </p>
-    <h2>Gallery</h2>
-    <ul>
-			<li><a href="images/vehicle/vehicle.jpg" title="mobilcar"><img src="images/vehicle/vehicle.jpg" width="101" height="130" alt="mobilcar"/></a></li>
-			<li><a href="images/vehicle/vehicle2.jpg" title="north greensville university"><img src="images/vehicle/vehicle2.jpg" width="101" height="130" alt="north greensville university"/></a></li>
-			<li><a href="images/vehicle/vehicle3.jpg" title="mini cooper"><img src="images/vehicle/vehicle3.jpg" width="101" height="130" alt="mini cooper"/></a></li>
-			<li><a href="images/vehicle/vehicle4.jpg" title="hot rod"><img src="images/vehicle/vehicle4.jpg" width="101" height="130" alt="hot rod"/></a></li>
-			<li><a href="images/vehicle/vehicle5.jpg" title="engyneered systems"><img src="images/vehicle/vehicle5.jpg" width="130" height="101" alt="engineered systems"/></a></li>
-			<li><a href="images/vehicle/vehicle6.jpg" title="truck sign"><img src="images/vehicle/vehicle6.jpg" width="130" height="101" alt="truck sign"/></a></li>
+    <h2 class="gallery">Gallery</h2>
+    <ul class="gallerylist">
+			<li><a href="images/vehicle/vehicle.jpg" title="mobilcar"><div class="zoom"><img src="images/vehicle/vehicle.jpg" width="101" height="130" alt="mobilcar"/></div></a></li>
+			<li><a href="images/vehicle/vehicle2.jpg" title="north greensville university"><div class="zoom"><img src="images/vehicle/vehicle2.jpg" width="101" height="130" alt="north greensville university"/></div></a></li>
+			<li><a href="images/vehicle/vehicle3.jpg" title="mini cooper"><div class="zoom"><img src="images/vehicle/vehicle3.jpg" width="101" height="130" alt="mini cooper"/></div></a></li>
+			<li><a href="images/vehicle/vehicle4.jpg" title="hot rod"><div class="zoom"><img src="images/vehicle/vehicle4.jpg" width="101" height="130" alt="hot rod"/></div></a></li>
+			<li><a href="images/vehicle/vehicle5.jpg" title="engyneered systems"><div class="zoom"><img src="images/vehicle/vehicle5.jpg" width="130" height="101" alt="engineered systems"/></div></a></li>
+			<li><a href="images/vehicle/vehicle6.jpg" title="truck sign"><div class="zoom"><img src="images/vehicle/vehicle6.jpg" width="130" height="101" alt="truck sign"/></div></a></li>
 	</ul>
     </article>
-    <aside></aside>
+   
     <footer class="grid_12">
+    <div id="bottom">
  <nav>
 <ul>
   <li><a href="index.html">Home</a></li>
@@ -70,6 +73,7 @@ Whether you know what you want on your vehicle or need advise as to what will be
   <li><a href="contact.html">Contact</a></li>
  </ul>
      </nav>
+     </div>
     <p class ="grid_7">Copyright &copy; 2013 SignsByDesign Company</p>
     </footer>
 </div>
