editing contact page

--- a/contact.html
+++ b/contact.html
@@ -43,16 +43,16 @@
     <article>
     <h2 class="header">Contact Information</h2>
 
-<p>Your business is very important to us.    
+<p class="contact">Your business is very important to us.    
 We can be reached Monday - Friday,
 8AM - 5PM Eastern Standard time.
 Please contact us via email, fax or phone.</p>
 
 
-<p>Our phone # is 864-322-7073</p>
+<p class="contact">Our phone # is 864-322-7073</p>
 
-<p>Our fax # is 864-322-7307</p>
-  <h3> Contact us by e-mail</h3>
+<p class="contact">Our fax # is 864-322-7307</p>
+  <h3 class="formheader"> Contact us by e-mail</h3>
    <form id="form" name="form" form method= "post" action="mailto:avtfmex87@gmail.com" />
    
         <div>
