--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header>
       <div id="logo"><img src="images/SignsbyDesign.png" alt="Signs By Design Logo" title="Logo" > </div> 
     </header>
-    <div id="topnav">
+    <div id="topnav1">
     <nav>
         <ul>
              <li><a href="index.html">Home</a></li>
