--- a/index.html
+++ b/index.html
@@ -52,17 +52,13 @@ This website demonstrates a wide variety of custom signs. If you need assistance
 
 Our staff values your business and is committed to providing quality products for our clients.   We desire to have a long term relationship with our clients by meeting all of their signage needs. 
 
-And as always, our success depends on your satisfaction.</p> 
-
-      <p class="info">Weather your sign lights partially, bad weather tears up 
+And as always, our success depends on your satisfaction. Weather your sign lights partially, bad weather tears up 
 your sign or it's been hit, our professional staff can take care of any problem 
 you have with your sign. We have experience with repairing and servicing pylons, cabinets, channel letters, neon, LED, digital message boards and more.   
 
 Our service extends to national accounts, commercial properties, restaurant chains, and one store owners. 
 
-Our experienced staff can do whatever is required for your particular job.  If you're not sure if we can repair or service your sign, please call or email and we'll be glad to discuss your needs.</p>
-      
-<p class="info">There is tons of repair and designs we do!!
+Our experienced staff can do whatever is required for your particular job.  If you're not sure if we can repair or service your sign, please call or email and we'll be glad to discuss your needs. There is tons of repair and designs we do!!
 Just visit any of the links t above to check out our work, if there is anything
 that you like then just click the contact link above to get you in the right direction.
 Or if you need a reparation give us a call we could come check your damaged sign and give
