--- a/vehicle.html
+++ b/vehicle.html
@@ -45,9 +45,8 @@
 
 
 <p class="info">Our staff has extensive experience with vehicle graphic installation.
-We have a digital printer, laminator and vinyl cutter, which allows us to print and cut your graphics on site.   We install both vinyl and digital graphics, as well as wrapping vehicles.   Our shop has a drive-in bay which allows indoor installation for most vehicles.</p>
-
-<p class="info">We have installed graphics from small cars to 18 wheelers.
+We have a digital printer, laminator and vinyl cutter, which allows us to print and cut your graphics on site.   We install both vinyl and digital graphics, as well as wrapping vehicles.   Our shop has a drive-in bay which allows indoor installation for most vehicles.
+We have installed graphics from small cars to 18 wheelers.
 Whether you know what you want on your vehicle or need advise as to what will be most effective for your vehicle(s), call or email us and we'll be happy to assist you. </p>
     <h2 class="gallery">Gallery</h2>
     <ul class="gallerylist">
