--- a/illum.html
+++ b/illum.html
@@ -45,9 +45,9 @@
 
 <p class="info">Illuminated signs are made from many different types of substrates and different types of lighting.     This section demonstrates a wide variety of custom made illuminated signs.
 If you need assistance with what types of materials or sign
-will work best for you, please feel free to email or call, and we'll work with you to create a custom illuminated sign that will work best for your business.</p>
+will work best for you, please feel free to email or call, and we'll work with you to create a custom illuminated sign that will work best for your business.
 
-<p class="info">Our staff values your business and is committed to providing
+Our staff values your business and is committed to providing
 quality products for our clients.    We welcome both local clients and national accounts. </p>
     <h2 class="gallery">Gallery</h2>
     
