--- a/nonillum.html
+++ b/nonillum.html
@@ -43,8 +43,8 @@
     <article>
     <h2 class="header">Non Illuminated Sign Gallery</h2>
 
-<p class="info">When choosing the substrate for your sign there are many choices available. You could choose plastic, wood, acrylic, aluminum, corrugated plastic (Corroplast), foam board and more This website demonstrates a wide variety of custom signs.</p>
-<p class="info">If you need assistance with what types of materials or sign
+<p class="info">When choosing the substrate for your sign there are many choices available. You could choose plastic, wood, acrylic, aluminum, corrugated plastic (Corroplast), foam board and more This website demonstrates a wide variety of custom signs.
+If you need assistance with what types of materials or sign
 will work best for you, please feel free to email or call, and
 we'll work with you to create a custom sign for your business.</p>
 
