--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div> 
     <article>
     
-    <h1 class="header">Welcome to</h1> <div id="logo2"><img src="images/SignsbyDesign.png" alt="Signs By Design Logo" title="Logo" ></div>
+    <h1 class="header">Welcome to Signs by Design</h1>
 
 <p class="info">Thank you for visiting our site.
 Thank you for visiting our site. We design, manufacture, install, repair, maintain and refurbish all types of signage.
